# CongressNetwork

./: .gitignore  BREV_RUN.md  README.md  requirements.txt  run_all.py  run_all.sh
data/: download_ep_data.py  download_voteview.py  house_deaths_1987_2025.csv
paper/: paper.tex  references.bib
replication/: .dockerignore  LICENSE-code.txt  LICENSE-data.txt  README.md  manifest.qmd  pyproject.toml
replication/docker/: Dockerfile
replication/docs/: forking_paths.csv  pipeline_dag.mmd
replication/scripts/: install_r_packages.R
results/: bli_regression_results.json  counterfactual_sensitivity.json  freshman_cohort_results.json  null_model_results.json  recovery_threshold_sensitivity.json  spectral_results.json  vote_filtering_results.json  weighted_spectral_results.json
src/: alluvial_coalitions.R  alluvial_data_prep.py  baselines.py  bayes_factor_dfbetas.R  bli_clt_verify.py  bli_proof_verification.py  bli_regression.py  bli_theorem_proofs_verify.py  bli_theorem_verification.py  build_departure_types.py  build_district_features.py  causalweight_mediation.R  centrality_comparison.py  cohort_ddd.py  cohort_ddd_robustness.py  compute_party_unity.py  config.py  counterfactual_sensitivity.py  data_pipeline.py  death_in_office.py  did_comparator.R  did_requirements.txt  ep_bli_all_terms.py  ep_bli_compute.py  evaluate.py  fect_placebo.R  freshman_cohort_analysis.py  generate_figures.py  honest_did.py  interference_death.R  interflex_gerrymandering.R  iv_redistricting.R  mediation_analysis.py  medsl_data.py  model.py  negative_controls.py  null_model_analysis.py  (+21 more)
