[project]
name = "gatcongress-replication"
version = "1.0.0"
description = "Replication package for The Geometry of Gridlock"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Jacob Crainic", email = "jacobcrainic@icloud.com" }]
dependencies = [
    "numpy>=1.26",
    "scipy>=1.11",
    "pandas>=2.0",
    "scikit-learn>=1.3",
    "statsmodels>=0.14",
    "matplotlib>=3.7",
    "requests>=2.31",
    "networkx>=3.1",
    "joblib>=1.3",
    "polars>=0.20",
    "pyarrow>=14.0",
    "geopandas>=0.14",
    "shapely>=2.0",
    "fiona>=1.9",
    "pyproj>=3.6",
    "rpy2>=3.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = false
